Modulando codigo y teniendo lista la vista de signup y signin instalando yo-yo y empty

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "creando un clon de instagram con node",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "gulp",
+    "start": "gulp watch & node server.js"
   },
   "keywords": [
     "apigram"
@@ -12,9 +14,12 @@
   "author": "Francisco Aular",
   "license": "ISC",
   "dependencies": {
+    "empty-element": "^1.0.0",
     "express": "^4.15.4",
     "materialize-css": "^0.100.1",
-    "pug": "^2.0.0-rc.3"
+    "page": "^1.7.1",
+    "pug": "^2.0.0-rc.3",
+    "yo-yo": "^1.4.1"
   },
   "devDependencies": {
     "babelify": "^7.3.0",
@@ -22,6 +27,7 @@
     "gulp": "^3.9.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.9.0"
   }
 }
