--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
   "dependencies": {
     "empty-element": "^1.0.0",
     "express": "^4.15.4",
+    "font-awesome": "^4.7.0",
     "materialize-css": "^0.100.1",
+    "moment": "^2.18.1",
     "page": "^1.7.1",
     "pug": "^2.0.0-rc.3",
+    "title": "^1.0.0",
     "yo-yo": "^1.4.1"
   },
   "devDependencies": {
