--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "empty-element": "^1.0.0",
     "express": "^4.15.4",
     "font-awesome": "^4.7.0",
+    "intl": "^1.2.5",
+    "intl-relativeformat": "^2.0.0",
     "materialize-css": "^0.100.1",
-    "moment": "^2.18.1",
     "page": "^1.7.1",
     "pug": "^2.0.0-rc.3",
     "title": "^1.0.0",
