--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.15.4",
     "font-awesome": "^4.7.0",
     "intl": "^1.2.5",
+    "intl-messageformat": "^2.1.0",
     "intl-relativeformat": "^2.0.0",
     "materialize-css": "^0.100.1",
     "page": "^1.7.1",
