--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Francisco Aular",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.16.2",
     "empty-element": "^1.0.0",
     "express": "^4.15.4",
     "font-awesome": "^4.7.0",
