--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "axios": "^0.16.2",
     "empty-element": "^1.0.0",
     "express": "^4.15.4",
+    "file-extension": "^3.1.2",
     "font-awesome": "^4.7.0",
     "intl": "^1.2.5",
     "intl-messageformat": "^2.1.0",
     "intl-relativeformat": "^2.0.0",
     "materialize-css": "^0.100.1",
+    "multer": "^1.3.0",
     "page": "^1.7.1",
     "pug": "^2.0.0-rc.3",
     "superagent": "^3.6.0",
